v0.1 - 22/12/2010

* First release

v0.2 - 13/1/2011

* Audio degrades without error in IE
* .detach() method to undo the effects of .attach()
* Objects will detach on remove event
* Sprite maps can take optional padding values for maps with padding around objects
* Fixed a typeahead bug with controls component
* Onload functions that will be called as soon as Crafty.init() is called
* Support object to detect support for HTML5 features and others
* Loader to load assets before the game starts.
* Rotation implemented

v0.2.1 - 21/1/2011

* Global assets
* Use of '*' in selector engine to select all entities
* Bug fix for DOM elements using the mouse component

v0.3

* Unit tests
* Better minification
* Use the inbuilt canvas background repeat
* SAT collision
* Comment code
* defineProperty for IE9
* Mobile
* Alpha - thanks to Josh Tynjala
* areaMap will automatically offset when a polygon is passed - thanks to Adrian Gaudebert
* Drawing optimization
* More Audio instances - thanks to Josh Tynjala
* Loader accepts onProgress and onError callbacks with info on what is loaded and percentages - thanks to Josh Tynjala
