@@ -29,6 +29,7 @@ v0.3
 * Comment code
 * defineProperty for IE9
 * Mobile
+* Variable frame rate
 * Alpha - thanks to Josh Tynjala
 * areaMap will automatically offset when a polygon is passed - thanks to Adrian Gaudebert
 * Drawing optimization
